...
import com.github.oheger.locationteller.duration.DurationModel
import com.github.oheger.locationteller.ui.state.TrackStatsFormatter
import com.github.oheger.locationteller.ui.state.TrackViewModel
import com.github.oheger.locationteller.ui.state.TrackViewModelImpl
import com.github.oheger.locationteller.ui.theme.LocationTellerTheme

internal const val CONFIG_ITEM_TRACK_TAB_BASIC = "config_track_tab_basic"
internal const val CONFIG_ITEM_TRACK_TAB_ADVANCED = "config_track_tab_advanced"
internal const val CONFIG_ITEM_TRACK_MIN_INTERVAL = "config_track_min_interval"
internal const val CONFIG_ITEM_TRACK_MAX_INTERVAL = "config_track_max_interval"
internal const val CONFIG_ITEM_TRACK_IDLE_INCREMENT = "config_track_idle_increment"
internal const val CONFIG_ITEM_TRACK_LOCATION_VALIDITY = "config_track_location_validity"
internal const val CONFIG_ITEM_TRACK_LOCATION_UPDATE_THRESHOLD = "config_track_location_update_threshold"
internal const val CONFIG_ITEM_TRACK_GPS_TIMEOUT = "config_track_gps_timeout"
...
